--- a/src/components/MainNavigation.module.css
+++ b/src/components/MainNavigation.module.css
@@ -1,10 +1,11 @@
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin: auto;
-    max-width: 80rem;
-    padding: 1rem;
+    max-width: 100%;
+    background-color: black;
+    box-sizing: border-box;
 }
 
 .list {
@@ -16,12 +17,12 @@
 }
 
 .title {
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 .list a {
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 .list a:hover, .list a:active {
@@ -30,15 +31,16 @@
 
 .list input {
     padding: 1rem;
-    border-radius: 1rem;
-    width: 16rem;
+    border-radius: 0.5rem;
+    width: 20rem;
     margin-left: 10rem;
     background-color: white;
     border: 1px solid black;
+    height: 3.5rem;
 }
 
 .icon {
-    width: 2rem
+    width: 2rem;
 }
 
 .user {
