--- a/src/components/UserEditForm.module.css
+++ b/src/components/UserEditForm.module.css
@@ -3,7 +3,55 @@
 }
 
 form {
-    margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  max-width: 1000px;
+  margin: 0 auto;
+  height: 100%;
+  
+}
+
+form > div {
     display: flex;
     flex-direction: column;
+}
+
+form > div > label {
+    display: inline-block;
+    font-weight: bold;
+    width: 3rem;
+    padding: 0;
+    margin: 0 0 1rem 0;
+}
+
+.username_input {
+    border: 1px solid #ccc;
+    font-size: 16px;
+    width: 50%;
+    border-radius: 1rem;
+    padding: 1rem
+}
+
+.user_intro_input {
+    border: 1px solid #ccc;
+    font-size: 16px;
+    width: 100%;
+    height: 10rem;
+    border-radius: 1rem;
+    padding: 1rem;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+form > div > button {
+    width: 10rem;
+    background-color: #4361ee;
+    border-radius: 5rem;
+    height: 3.5rem;
+    font-size: 1rem;
+    color: white;
 }
