--- a/src/components/MainNavigation.module.css
+++ b/src/components/MainNavigation.module.css
@@ -1,10 +1,9 @@
 
 .header {
     display: flex;
-    justify-content: space-between;
-    margin: auto;
+    justify-content: space-around;
     max-width: 100%;
-    background-color: #007f5f;
+    background-color: green;
     box-sizing: border-box;
     flex-direction: row;
     padding: 0 20rem;
@@ -36,6 +35,7 @@
     border-radius: 0.5rem;
     width: 20rem;
     margin-left: 10rem;
+    margin-right: 5rem;
     background-color: white;
     border: 1px solid black;
     height: 3.5rem;
