--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 body {
   margin: 0;
   font-family: 'Lato', sans-serif;
+  color: #555;
 }
 
 ul {
@@ -16,4 +17,19 @@ ul {
 a {
   text-decoration: none;
   color: #333;
+}
+
+
+/* 스크롤바 */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; 
+  border-radius: 6px; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; 
 }
