refactor: mainnavigation 수정

--- a/src/components/common/MainNavigation.module.css
+++ b/src/components/common/MainNavigation.module.css
@@ -1,4 +1,4 @@
-
+/* 
 .header {
     display: flex;
     justify-content: space-around;
@@ -58,4 +58,4 @@
 
 .user img {
     width: 3rem;
-}
+} */
